diesel_compile_tests/tests/ui/belongs_to_incorrect_lifetime_syntax.stderr
error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/belongs_to_incorrect_lifetime_syntax.rs:25:23
   |
25 | #[belongs_to(parent = "Foo<'a>")]
   |                       ^^^^^^^^^ undeclared lifetime

error: aborting due to previous error

For more information about this error, try `rustc --explain E0261`.
